force-app/main/default/objects/Quote/fields/PB__c.field-meta.xml
<CustomField>
    <fullName>PB__c</fullName>
    <label>PB</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>