force-app/main/default/objects/Quote/fields/PB_maximo_de_los_tramos__c.field-meta.xml
<CustomField>
    <fullName>PB_maximo_de_los_tramos__c</fullName>
    <label>PB máximo de los tramos</label>
    <summarizedField>Tramo__c.PBA__c</summarizedField>
    <summaryForeignKey>Tramo__c.Presupuesto__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>