force-app/main/default/objects/Quote/fields/PB_proceso_aprobacion__c.field-meta.xml
<CustomField>
    <fullName>PB_proceso_aprobacion__c</fullName>
    <formula>PB__c * 10</formula>
    <label>PB proceso aprobación</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>