force-app/main/default/objects/Quote/fields/Pegatinas__c.field-meta.xml
<CustomField>
    <fullName>Pegatinas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pegatinas</label>
    <type>Checkbox</type>
</CustomField>