force-app/main/default/objects/Quote/fields/Perfil_base__c.field-meta.xml
<CustomField>
    <fullName>Perfil_base__c</fullName>
    <label>Perfil base</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1VITORIA CALEFACCION</fullName>
            </value>
            <value>
                <fullName>2ALBACETE CALEFACCION</fullName>
            </value>
            <value>
                <fullName>3ALICANTE CALEFACCION</fullName>
            </value>
            <value>
                <fullName>5AVILA CALEFACCION</fullName>
            </value>
            <value>
                <fullName>8BARCELONA CALEFACCION</fullName>
            </value>
            <value>
                <fullName>9BURGOS CALEFACCION</fullName>
            </value>
            <value>
                <fullName>100HOTEL VERANO</fullName>
            </value>
            <value>
                <fullName>12CASTELLON CALEFACCION</fullName>
            </value>
            <value>
                <fullName>120LINEAL</fullName>
            </value>
            <value>
                <fullName>16CUENCA CALEFACCION</fullName>
            </value>
            <value>
                <fullName>17GIRONA CALEFACCION</fullName>
            </value>
            <value>
                <fullName>19GUADALAJARA CALEFACCION</fullName>
            </value>
            <value>
                <fullName>20SAN SEBASTIAN CALEFACCION</fullName>
            </value>
            <value>
                <fullName>22HUESCA CALEFACCION</fullName>
            </value>
            <value>
                <fullName>24LEON CALEFACCION</fullName>
            </value>
            <value>
                <fullName>25LERIDA CALEFACCION</fullName>
            </value>
            <value>
                <fullName>26LOGROÑO CALEFACCION</fullName>
            </value>
            <value>
                <fullName>28MADRID CALEFACCION</fullName>
            </value>
            <value>
                <fullName>31PAMPLONA CALEFACCION</fullName>
            </value>
            <value>
                <fullName>33ASTURIAS CALEFACCION</fullName>
            </value>
            <value>
                <fullName>34PALENCIA CALEFACCION</fullName>
            </value>
            <value>
                <fullName>37SALAMANCA</fullName>
            </value>
            <value>
                <fullName>39SANTANDER CALEFACCION</fullName>
            </value>
            <value>
                <fullName>40SEGOVIA CALEFACCION</fullName>
            </value>
            <value>
                <fullName>42SORIA CALEFACCION</fullName>
            </value>
            <value>
                <fullName>43TARRAGONA CALEFACCION</fullName>
            </value>
            <value>
                <fullName>44TERUEL CALEFACCION</fullName>
            </value>
            <value>
                <fullName>45TOLEDO CALEFACCION</fullName>
            </value>
            <value>
                <fullName>46VALENCIA CALEFACCION</fullName>
            </value>
            <value>
                <fullName>47VALLADOLID CALEFACCION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>