force-app/main/default/objects/Quote/fields/Plantilla_entrada_datos__c.field-meta.xml
<CustomField>
    <fullName>Plantilla_entrada_datos__c</fullName>
    <label>Plantilla entrada datos</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>B-CENTRO</fullName>
            </value>
            <value>
                <fullName>B-ESTE</fullName>
            </value>
            <value>
                <fullName>B-NORTE</fullName>
            </value>
            <value>
                <fullName>DEP.PROP.C</fullName>
            </value>
            <value>
                <fullName>DEP.PROP.E</fullName>
            </value>
            <value>
                <fullName>DEP.PROP.N</fullName>
            </value>
            <value>
                <fullName>GG-CEN-AGR</fullName>
            </value>
            <value>
                <fullName>GG-CEN-COL</fullName>
            </value>
            <value>
                <fullName>GG-CEN-HRO</fullName>
            </value>
            <value>
                <fullName>GG-CEN-IN</fullName>
            </value>
            <value>
                <fullName>GG-EST-AGR</fullName>
            </value>
            <value>
                <fullName>GG-EST-COL</fullName>
            </value>
            <value>
                <fullName>GG-ESTE-IN</fullName>
            </value>
            <value>
                <fullName>GG-EST-HRO</fullName>
            </value>
            <value>
                <fullName>GG-NOR-AGR</fullName>
            </value>
            <value>
                <fullName>GG-NOR-COL</fullName>
            </value>
            <value>
                <fullName>GG-NOR-HRO</fullName>
            </value>
            <value>
                <fullName>GG-NOR-IN</fullName>
            </value>
            <value>
                <fullName>P-CEN-IND</fullName>
            </value>
            <value>
                <fullName>P-CENT-AGR</fullName>
            </value>
            <value>
                <fullName>P-CENT-COL</fullName>
            </value>
            <value>
                <fullName>P-CENT-HRO</fullName>
            </value>
            <value>
                <fullName>PC-PROM-CE</fullName>
            </value>
            <value>
                <fullName>PC-PROM-ES</fullName>
            </value>
            <value>
                <fullName>PC-PROM-NO</fullName>
            </value>
            <value>
                <fullName>PC-US-CENT</fullName>
            </value>
            <value>
                <fullName>PC-US-ESTE</fullName>
            </value>
            <value>
                <fullName>PC-US-NORT</fullName>
            </value>
            <value>
                <fullName>P-ESTE-AGR</fullName>
            </value>
            <value>
                <fullName>P-ESTE-COL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>