force-app/main/default/objects/Quote/fields/Plazos_de_pago_gas__c.field-meta.xml
<CustomField>
    <fullName>Plazos_de_pago_gas__c</fullName>
    <label>Plazos de pago</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>5 días</fullName>
            </value>
            <value>
                <fullName>20 días</fullName>
            </value>
            <value>
                <fullName>Otros días</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>