force-app/main/default/objects/Quote/fields/Poblaci_n_env_o__c.field-meta.xml
<CustomField>
    <fullName>Poblaci_n_env_o__c</fullName>
    <label>Población envío</label>
    <length>100</length>
    <type>Text</type>
</CustomField>