force-app/main/default/objects/Quote/fields/Poblaci_n_facturaci_n__c.field-meta.xml
<CustomField>
    <fullName>Poblaci_n_facturaci_n__c</fullName>
    <label>Población facturación</label>
    <length>100</length>
    <type>Text</type>
</CustomField>