force-app/main/default/objects/Quote/fields/Porcentaje_desde__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_desde__c</fullName>
    <label>Porcentaje desde</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>