force-app/main/default/objects/Quote/fields/Potencia_1__c.field-meta.xml
<CustomField>
    <fullName>Potencia_1__c</fullName>
    <description>Kcal/h</description>
    <label>Potencia 1</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>