force-app/main/default/objects/Quote/fields/Potencia_2__c.field-meta.xml
<CustomField>
    <fullName>Potencia_2__c</fullName>
    <label>Potencia 2</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>