force-app/main/default/objects/Quote/fields/Potencia_3__c.field-meta.xml
<CustomField>
    <fullName>Potencia_3__c</fullName>
    <label>Potencia 3</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>