force-app/main/default/objects/Quote/fields/Potencia_instalada_Kw__c.field-meta.xml
<CustomField>
    <fullName>Potencia_instalada_Kw__c</fullName>
    <label>Potencia instalada (Kw)</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>