force-app/main/default/objects/Quote/fields/Potencia_Kcal_hora_Total__c.field-meta.xml
<CustomField>
    <fullName>Potencia_Kcal_hora_Total__c</fullName>
    <formula>Potencia_1__c + Potencia_2__c + Potencia_3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Potencia Kcal/hora Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>