force-app/main/default/objects/Quote/fields/Ppto_estandar__c.field-meta.xml
<CustomField>
    <fullName>Ppto_estandar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ppto estandar</label>
    <type>Checkbox</type>
</CustomField>