force-app/main/default/objects/Quote/fields/Ppto_NO_estandar__c.field-meta.xml
<CustomField>
    <fullName>Ppto_NO_estandar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ppto NO estandar</label>
    <type>Checkbox</type>
</CustomField>