force-app/main/default/objects/Quote/fields/Precio_de_Venta__c.field-meta.xml
<CustomField>
    <fullName>Precio_de_Venta__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio de Venta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>