force-app/main/default/objects/Quote/fields/Precio_fecha__c.field-meta.xml
<CustomField>
    <fullName>Precio_fecha__c</fullName>
    <label>Precio fecha</label>
    <length>50</length>
    <type>Text</type>
</CustomField>