force-app/main/default/objects/Quote/fields/Precio_fijo_anual_Kg_numeric__c.field-meta.xml
<CustomField>
    <fullName>Precio_fijo_anual_Kg_numeric__c</fullName>
    <formula>Precio_fijo_anual_Kg__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio fijo anual Kg numeric</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>