force-app/main/default/objects/Quote/fields/Precio_fijo_anual_L__c.field-meta.xml
<CustomField>
    <fullName>Precio_fijo_anual_L__c</fullName>
    <label>Precio fijo anual L</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>