force-app/main/default/objects/Quote/fields/Precio_L_numeric__c.field-meta.xml
<CustomField>
    <fullName>Precio_L_numeric__c</fullName>
    <description>Campo formula utilzado para mostrar los campos currencies con el formateo de Salesforce [#.##0,00] y sin mostrar la moneda [€]</description>
    <formula>Precio_L__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio L numeric</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>