force-app/main/default/objects/Quote/fields/Precio_mensual_Kg__c.field-meta.xml
<CustomField>
    <fullName>Precio_mensual_Kg__c</fullName>
    <label>Precio mensual Kg</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>