force-app/main/default/objects/Quote/fields/Precio_mensual_L__c.field-meta.xml
<CustomField>
    <fullName>Precio_mensual_L__c</fullName>
    <label>Precio mensual L</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>