force-app/main/default/objects/Quote/fields/Precio_Primaservicios__c.field-meta.xml
<CustomField>
    <fullName>Precio_Primaservicios__c</fullName>
    <label>Precio Primaservicios</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>