force-app/main/default/objects/Quote/fields/Precio_producto_gas__c.field-meta.xml
<CustomField>
    <fullName>Precio_producto_gas__c</fullName>
    <label>Precio producto gas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>