force-app/main/default/objects/Quote/fields/Precio_total__c.field-meta.xml
<CustomField>
    <fullName>Precio_total__c</fullName>
    <label>Precio total</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>