force-app/main/default/objects/Quote/fields/Precio_venta_total__c.field-meta.xml
<CustomField>
    <fullName>Precio_venta_total__c</fullName>
    <formula>Precio_de_Venta__c  -  Importe_descuento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio venta total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>