force-app/main/default/objects/Quote/fields/Prescriptor__c.field-meta.xml
<CustomField>
    <fullName>Prescriptor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prescriptor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Partner</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Presupuestos</relationshipLabel>
    <relationshipName>Presupuestos</relationshipName>
    <type>Lookup</type>
</CustomField>