force-app/main/default/objects/Quote/fields/Prescriptor_no_en_BD__c.field-meta.xml
<CustomField>
    <fullName>Prescriptor_no_en_BD__c</fullName>
    <inlineHelpText>Si el prescriptor es nuevo o no está en la base de datos introducir el nombre</inlineHelpText>
    <label>Prescriptor (no en BD)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>