force-app/main/default/objects/Quote/fields/Prima__c.field-meta.xml
<CustomField>
    <fullName>Prima__c</fullName>
    <label>Prima prescriptor</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>