force-app/main/default/objects/Quote/fields/Primaconfort_mes__c.field-meta.xml
<CustomField>
    <fullName>Primaconfort_mes__c</fullName>
    <label>Primaconfort (€/año)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>