force-app/main/default/objects/Quote/fields/Primaconta__c.field-meta.xml
<CustomField>
    <fullName>Primaconta__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Se trata de un contrato tipo Primaconta?</description>
    <inlineHelpText>Se trata de un contrato tipo Primaconta?</inlineHelpText>
    <label>Primaconta</label>
    <type>Checkbox</type>
</CustomField>