force-app/main/default/objects/Quote/fields/Prioridades_ahorro_anual__c.field-meta.xml
<CustomField>
    <fullName>Prioridades_ahorro_anual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prioridades ahorro anual</label>
    <type>Checkbox</type>
</CustomField>