force-app/main/default/objects/Quote/fields/Prioridades_comodidad__c.field-meta.xml
<CustomField>
    <fullName>Prioridades_comodidad__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prioridades comodidad</label>
    <type>Checkbox</type>
</CustomField>