force-app/main/default/objects/Quote/fields/Prioridades_despreocuparse__c.field-meta.xml
<CustomField>
    <fullName>Prioridades_despreocuparse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prioridades despreocuparse</label>
    <type>Checkbox</type>
</CustomField>