force-app/main/default/objects/Quote/fields/Prioridades_enterrado__c.field-meta.xml
<CustomField>
    <fullName>Prioridades_enterrado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prioridades enterrado</label>
    <type>Checkbox</type>
</CustomField>