force-app/main/default/objects/Quote/fields/Prioridades_impacto__c.field-meta.xml
<CustomField>
    <fullName>Prioridades_impacto__c</fullName>
    <label>Prioridades impacto</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Impacto alto</fullName>
            </value>
            <value>
                <fullName>Impacto bajo</fullName>
            </value>
            <value>
                <fullName>Impacto medio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>