force-app/main/default/objects/Quote/fields/Prioridades_pagar_consumo__c.field-meta.xml
<CustomField>
    <fullName>Prioridades_pagar_consumo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prioridades pagar consumo</label>
    <type>Checkbox</type>
</CustomField>