force-app/main/default/objects/Quote/fields/Prioridades_precio_fijo__c.field-meta.xml
<CustomField>
    <fullName>Prioridades_precio_fijo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prioridades precio fijo</label>
    <type>Checkbox</type>
</CustomField>