force-app/main/default/objects/Quote/fields/Prioridades_tarifa_plana__c.field-meta.xml
<CustomField>
    <fullName>Prioridades_tarifa_plana__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prioridades tarifa plana</label>
    <type>Checkbox</type>
</CustomField>