force-app/main/default/objects/Quote/fields/Producto__c.field-meta.xml
<CustomField>
    <fullName>Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Procucto</description>
    <label>Producto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Presupuestos</relationshipLabel>
    <relationshipName>Presupuestos</relationshipName>
    <type>Lookup</type>
</CustomField>