force-app/main/default/objects/Quote/fields/Producto_contratado__c.field-meta.xml
<CustomField>
    <fullName>Producto_contratado__c</fullName>
    <description>Este campo es el que pasa a la tabla de contratos de Navision</description>
    <label>Producto contratado</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACONDICIONAMIENTO</fullName>
            </value>
            <value>
                <fullName>ALQUILER</fullName>
            </value>
            <value>
                <fullName>ALTA PC</fullName>
            </value>
            <value>
                <fullName>AMO-AGRICOLA</fullName>
            </value>
            <value>
                <fullName>AMO-INCAEX</fullName>
            </value>
            <value>
                <fullName>AMO-PERLIT</fullName>
            </value>
            <value>
                <fullName>AMO-PUIGNE</fullName>
            </value>
            <value>
                <fullName>AMO-SAUC-A</fullName>
            </value>
            <value>
                <fullName>AMO-SAUC-B</fullName>
            </value>
            <value>
                <fullName>AMO-SAULED</fullName>
            </value>
            <value>
                <fullName>ANTICIPO</fullName>
            </value>
            <value>
                <fullName>CAMBIO TITULAR</fullName>
            </value>
            <value>
                <fullName>CANCEL</fullName>
            </value>
            <value>
                <fullName>COLOCACIÓN TELEM</fullName>
            </value>
            <value>
                <fullName>CONEXION CONT</fullName>
            </value>
            <value>
                <fullName>CONSIGNACION</fullName>
            </value>
            <value>
                <fullName>COPIADOCS</fullName>
            </value>
            <value>
                <fullName>DESMONTAJE</fullName>
            </value>
            <value>
                <fullName>Dº ACOMETIDA</fullName>
            </value>
            <value>
                <fullName>DPV ALQUILER</fullName>
            </value>
            <value>
                <fullName>DPV BUTANO</fullName>
            </value>
            <value>
                <fullName>DPV GLP-C</fullName>
            </value>
            <value>
                <fullName>DPV MANTENIMIENTO</fullName>
            </value>
            <value>
                <fullName>DPV PROPANO</fullName>
            </value>
            <value>
                <fullName>DSCTO COMERCIAL</fullName>
            </value>
            <value>
                <fullName>FEE-FIJO</fullName>
            </value>
            <value>
                <fullName>FORFAIT</fullName>
            </value>
            <value>
                <fullName>GLP1</fullName>
            </value>
            <value>
                <fullName>GLP1 - NO STOCK</fullName>
            </value>
            <value>
                <fullName>GLP1-FUND</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>