force-app/main/default/objects/Quote/fields/Producto_descuento__c.field-meta.xml
<CustomField>
    <fullName>Producto_descuento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto descuento</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Presupuestos (Producto descuento)</relationshipLabel>
    <relationshipName>Presupuestos1</relationshipName>
    <type>Lookup</type>
</CustomField>