force-app/main/default/objects/Quote/fields/Propiedad_del_tanque__c.field-meta.xml
<CustomField>
    <fullName>Propiedad_del_tanque__c</fullName>
    <label>Propiedad del tanque</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Primagas</fullName>
                <default>true</default>
                <label>Primagas</label>
            </value>
            <value>
                <fullName>Propio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>