force-app/main/default/objects/Quote/fields/Propietario_de_oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Propietario_de_oportunidad__c</fullName>
    <formula>Opportunity.Owner.FirstName + &apos; &apos; + Opportunity.Owner.LastName</formula>
    <label>Propietario de oportunidad</label>
    <type>Text</type>
</CustomField>