force-app/main/default/objects/Quote/fields/Provincia_env_o__c.field-meta.xml
<CustomField>
    <fullName>Provincia_env_o__c</fullName>
    <label>Provincia envío</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MELILLA</fullName>
            </value>
            <value>
                <fullName>ÁLAVA</fullName>
            </value>
            <value>
                <fullName>ALBACETE</fullName>
            </value>
            <value>
                <fullName>ALICANTE</fullName>
            </value>
            <value>
                <fullName>ALMERÍA</fullName>
            </value>
            <value>
                <fullName>ÁVILA</fullName>
            </value>
            <value>
                <fullName>BADAJOZ</fullName>
            </value>
            <value>
                <fullName>BALEARES (ILLES)</fullName>
            </value>
            <value>
                <fullName>BARCELONA</fullName>
            </value>
            <value>
                <fullName>BURGOS</fullName>
            </value>
            <value>
                <fullName>CÁCERES</fullName>
            </value>
            <value>
                <fullName>CÁDIZ</fullName>
            </value>
            <value>
                <fullName>CASTELLÓN</fullName>
            </value>
            <value>
                <fullName>CIUDAD REAL</fullName>
            </value>
            <value>
                <fullName>CÓRDOBA</fullName>
            </value>
            <value>
                <fullName>A CORUÑA</fullName>
            </value>
            <value>
                <fullName>CUENCA</fullName>
            </value>
            <value>
                <fullName>GIRONA</fullName>
            </value>
            <value>
                <fullName>GRANADA</fullName>
            </value>
            <value>
                <fullName>GUADALAJARA</fullName>
            </value>
            <value>
                <fullName>GUIPÚZCOA</fullName>
            </value>
            <value>
                <fullName>HUELVA</fullName>
            </value>
            <value>
                <fullName>HUESCA</fullName>
            </value>
            <value>
                <fullName>JAÉN</fullName>
            </value>
            <value>
                <fullName>LEÓN</fullName>
            </value>
            <value>
                <fullName>LLEIDA</fullName>
            </value>
            <value>
                <fullName>LA RIOJA</fullName>
            </value>
            <value>
                <fullName>LUGO</fullName>
            </value>
            <value>
                <fullName>MADRID</fullName>
            </value>
            <value>
                <fullName>MÁLAGA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>