force-app/main/default/objects/Quote/fields/Provincia_facturaci_n__c.field-meta.xml
<CustomField>
    <fullName>Provincia_facturaci_n__c</fullName>
    <label>Provincia facturación</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>A CORUÑA/LA CORUÑA</fullName>
            </value>
            <value>
                <fullName>ALAVA/ARABA</fullName>
            </value>
            <value>
                <fullName>ALBACETE</fullName>
            </value>
            <value>
                <fullName>ALICANTE</fullName>
            </value>
            <value>
                <fullName>ALMERÍA</fullName>
            </value>
            <value>
                <fullName>ASTURIAS</fullName>
            </value>
            <value>
                <fullName>ÁVILA</fullName>
            </value>
            <value>
                <fullName>BADAJOZ</fullName>
            </value>
            <value>
                <fullName>BALEARES (ILLES)</fullName>
            </value>
            <value>
                <fullName>BARCELONA</fullName>
            </value>
            <value>
                <fullName>BIZKAIA/VIZCAYA</fullName>
            </value>
            <value>
                <fullName>BURGOS</fullName>
            </value>
            <value>
                <fullName>CÁCERES</fullName>
            </value>
            <value>
                <fullName>CÁDIZ</fullName>
            </value>
            <value>
                <fullName>CANTABRIA</fullName>
            </value>
            <value>
                <fullName>CASTELLÓN</fullName>
            </value>
            <value>
                <fullName>CIUDAD REAL</fullName>
            </value>
            <value>
                <fullName>CÓRDOBA</fullName>
            </value>
            <value>
                <fullName>CUENCA</fullName>
            </value>
            <value>
                <fullName>GIPUZKOA/GUIPUZCOA</fullName>
            </value>
            <value>
                <fullName>GIRONA/GERONA</fullName>
            </value>
            <value>
                <fullName>GRANADA</fullName>
            </value>
            <value>
                <fullName>GUADALAJARA</fullName>
            </value>
            <value>
                <fullName>HUELVA</fullName>
            </value>
            <value>
                <fullName>HUESCA</fullName>
            </value>
            <value>
                <fullName>JAÉN</fullName>
            </value>
            <value>
                <fullName>LA RIOJA</fullName>
            </value>
            <value>
                <fullName>LAS PALMAS</fullName>
            </value>
            <value>
                <fullName>LEÓN</fullName>
            </value>
            <value>
                <fullName>LLEIDA/LÉRIDA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>