force-app/main/default/objects/Quote/fields/Proyecto_Exterior__c.field-meta.xml
<CustomField>
    <fullName>Proyecto_Exterior__c</fullName>
    <label>Proyecto Exterior</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>