force-app/main/default/objects/Quote/fields/Proyecto_Interior__c.field-meta.xml
<CustomField>
    <fullName>Proyecto_Interior__c</fullName>
    <label>Proyecto Interior</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>