force-app/main/default/objects/Quote/fields/Proyectos__c.field-meta.xml
<CustomField>
    <fullName>Proyectos__c</fullName>
    <label>Proyectos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>