force-app/main/default/objects/Quote/fields/Prueba_instalaci_n__c.field-meta.xml
<CustomField>
    <fullName>Prueba_instalaci_n__c</fullName>
    <label>Prueba instalación</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>