force-app/main/default/objects/Quote/fields/Ratio_de_retorno__c.field-meta.xml
<CustomField>
    <fullName>Ratio_de_retorno__c</fullName>
    <formula>Margen_anual__c  / Total_Inversi_n__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ratio de retorno</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>