force-app/main/default/objects/Quote/fields/Rentabilidad_Prevista__c.field-meta.xml
<CustomField>
    <fullName>Rentabilidad_Prevista__c</fullName>
    <label>Rentabilidad Prevista</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>