force-app/main/default/objects/Quote/fields/Rescision_de_contrato_letra__c.field-meta.xml
<CustomField>
    <fullName>Rescision_de_contrato_letra__c</fullName>
    <label>Rescisión de contrato (letra)</label>
    <length>150</length>
    <type>Text</type>
</CustomField>