force-app/main/default/objects/Quote/fields/Rescision_de_contrato_n_m__c.field-meta.xml
<CustomField>
    <fullName>Rescision_de_contrato_n_m__c</fullName>
    <label>Rescisión de contrato ( núm )</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>