force-app/main/default/objects/Quote/fields/Rescision_de_contrato_ton_ano__c.field-meta.xml
<CustomField>
    <fullName>Rescision_de_contrato_ton_ano__c</fullName>
    <label>Rescisión de contrato (ton/año)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>